--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 psycopg2-binary==2.9.7
+psycopg2==2.9.7
 amqp==5.1.1
 asgiref==3.7.2
 async-timeout==4.0.3
@@ -13,23 +14,26 @@ colorama==0.4.6
 Django==3.2
 django-filter==23.2
 djangorestframework==3.12.0
+drf-yasg==1.21.7
 Faker==12.0.1
 gunicorn==21.2.0
 importlib-metadata==6.8.0
+inflection==0.5.1
 kombu==5.3.1
 Markdown==3.4.4
 mixer==7.2.2
 packaging==23.1
 prompt-toolkit==3.0.39
-psycopg2==2.9.7
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0.1
 redis==4.6.0
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
+uritemplate==4.1.1
 vine==5.0.0
 wcwidth==0.2.6
 zipp==3.16.2
